tests/positive/Adt.juvix
module Adt;

type Bool :=
  | true
  | false;

open Bool using {true; false} public;

open Bool;

type Pair (A B : Type) := mkPair A B;

open Pair using {mkPair} public;

open Pair;

type Nat :=
  | zero
  | suc Nat;

open Nat using {zero; suc} public;

open Nat;

c1 : Bool := true;

c2 : Bool := false;

c3 : Pair Bool Bool := mkPair true false;

c4 : Nat := zero;

c5 : Nat := suc zero;
